# The-Ringmasters-Roundtable

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  package.json  vite.config.js
backend/: Dockerfile  ReviewSA.ipynb  package-lock.json  server.js  start_services.sh
backend/mcp-ai/: Dockerfile  event_agent.py  pyproject.toml
backend/mcp-ai/assistant/: graph.py  main.py  memory.py  test_assistant.py  vector_store.py
backend/mcp-ai/server/: travel_mcp_server.py
backend/scripts/: fixSentiment.js
backend/sentiment/: README.md  api.py  main.py  train_rnn.py
backend/services/: sentimentAnalysis.js
src/: App.jsx  firebase.js
src/components/: Navbar.jsx
src/config/: env.js
src/lib/: apiClient.js  opportunitiesClient.js
src/pages/: AIAssistant.jsx  Compare.jsx  Events.jsx  Weather.jsx  planner.jsx
src/utils/: api.js
