[project]
name = "mcp-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-groq>=0.3.8",
    "mcp-use>=1.3.11",
    "pika>=1.3.2",
    "requests>=2.31.0",
    "cohere>=5.0.0",
    "mcp>=1.2.0",
    "langgraph>=0.2.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic>=2.6.0",
    "langchain-core>=0.2.0",
]
